namespace Sem5Pi2425.Domain.AppointmentAggr;

public class AppointmentDto
{
    
}