namespace Sem5Pi2425.Domain.OperationRequestAggr;

public enum Priority {
    Elective,
    Urgent,
    Emergency
}