namespace Sem5Pi2425.Domain.PatientAggr;

public enum Gender {
    Male,
    Female
}