namespace Sem5Pi2425.Domain.StaffAggr;

public enum Specialization {
}