using System;

public enum Role{
    Admin,
    Doctor,
    Nurse,
    Technician,
    Patient
}
